AC_INIT()
AC_PROG_CXX()
AC_LANG_CPLUSPLUS()

dnl *************************************************************************
dnl Preferences
dnl *************************************************************************

Config_Static=""
Config_Unicode="--unicode"

dnl *************************************************************************
dnl MediaInfoLib
dnl *************************************************************************

AC_CHECK_LIB(MediaInfo, MediaInfo_New,, [AC_MSG_ERROR([Could not find libMediaInfo.so: install MediaInfoLib first.])])

dnl *************************************************************************
dnl wxWidgets
dnl *************************************************************************

dnl -------------------------------------------------------------------------
dnl Config
AC_PATH_PROG(WX_CONFIG, wx-config, no, $PATH:/usr/local/bin )
if [[ "$WX_CONFIG" = "no" ]] ; then
	AC_MSG_ERROR("Could not find wx-config: install wxWidgets (2.6 or 2.8) first.")
fi

dnl -------------------------------------------------------------------------
dnl Version
wx_release=`${WX_CONFIG} $Config_Static $Config_Unicode --version=2.8 --release`
if [[ "${wx_release}" = 2.8 ]]
then
  echo "WxWidgets 2.8 found."
else
  wx_release=`${WX_CONFIG} $Config_Static $Config_Unicode --version=2.6 --release`
  if [[ "${wx_release}" = 2.6 ]]
  then
    echo "WxWidgets 2.6 found."
  else
    `${WX_CONFIG} $Config_Static $Config_Unicode --list`
    AC_MSG_ERROR([Unable to locate a suitable configuration of wxWidgets 2.6 or 2.8.
install wxWidgets (2.6 or 2.8) first.
])
  fi
fi

dnl -------------------------------------------------------------------------
dnl Makefile
LIBS="$LIBS `$WX_CONFIG --libs`"
CPPFLAGS="$CPPFLAGS `$WX_CONFIG --cxxflags`"

dnl *************************************************************************
dnl SndFile
dnl *************************************************************************

AC_CHECK_HEADER(sndfile.h, default_libsndfile="system", default_libsndfile="local")
if [[ "$default_libsndfile" = "system" ]] ; then
	if pkg-config --atleast-version=1.0.12 sndfile ; then
		default_libsndfile="system"
	else	
		echo "System libsndfile older than 1.0.12"
		AC_CHECK_FILE(lib-src/libsndfile/src/sndfile.h.in, default_libsndfile="local", default_libsndfile="no")
	fi
fi

dnl *************************************************************************
dnl MakeFile
dnl *************************************************************************
CPPFLAGS="$CPPFLAGS -DUNICODE -D_UNICODE"



dnl AC_ARG_ENABLE(flac, AC_HELP_STRING([--disable-flac], [disable FLAC support]),,[LIBOBJS="$LIBOBJS -lFLAC"])
dnl AC_CHECK_LIB(flac, x,, AC_MSG_WARN(libflac not found FLAC support is disabled))
dnl AC_CHECK_LIB(lwx_gtk2u_core-2.6, main,, AC_MSG_ERROR(WxWidgets not found))
AC_OUTPUT(Makefile)
